@@ -142,12 +142,17 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.16</version>
+                <version>2.19</version>
                 <configuration>
                     <reuseForks>false</reuseForks>
                     <forkCount>1C</forkCount>
                     <parallel>classes</parallel>
                     <threadCount>4</threadCount>
+                    <argLine>${argLine} -Xms2056M -Xmx4096M -XX:MaxPermSize=512M</argLine>
+                    <excludedGroups>${test.excludedGroups}</excludedGroups>
+                    <!--<systemPropertyVariables>-->
+                        <!--<jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>-->
+                    <!--</systemPropertyVariables>-->
                 </configuration>
             </plugin>
             <plugin>
@@ -164,6 +169,19 @@
                     <execution>
                         <id>default-report</id>
                         <phase>prepare-package</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>jacoco-initialize</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>jacoco-site</id>
+                        <phase>package</phase>
                         <goals>
                             <goal>report</goal>
                         </goals>
@@ -188,12 +206,12 @@
                                     </limits>
                                 </rule>
                             </rules>
-                            <excludes>
-                                <exclude>**/optaplanner/*</exclude>
-                                <exclude>**/kie/*</exclude>
-                                <exclude>**/mvel/*</exclude>
-                                <exclude>**/drools/*</exclude>
-                            </excludes>
+                            <!--<excludes>-->
+                                <!--<exclude>**/optaplanner/*</exclude>-->
+                                <!--<exclude>**/kie/*</exclude>-->
+                                <!--<exclude>**/mvel/*</exclude>-->
+                                <!--<exclude>**/drools/*</exclude>-->
+                            <!--</excludes>-->
                         </configuration>
                     </execution>
                 </executions>
